Fix scrollbar style

--- a/app/style/Layout.less
+++ b/app/style/Layout.less
@@ -49,6 +49,17 @@
   filter: blur(6px);
 }
 
+.page-content::-webkit-scrollbar,
+.tab-content::-webkit-scrollbar {
+  width: 5px;
+  background-color: #e7eaed;
+}
+
+.page-content::-webkit-scrollbar-thumb,
+.tab-content::-webkit-scrollbar-thumb {
+  background-color: #8797A5;
+}
+
 .inverted-colors {
   background-color: #0c1e3e;
 }
