--- a/app/style/SideBar.less
+++ b/app/style/SideBar.less
@@ -141,3 +141,12 @@
   text-align: right;
   text-decoration: none;
 }
+
+.sidebar-scroll::-webkit-scrollbar {
+  width: 5px;
+  background-color: #09182d;
+}
+
+.sidebar-scroll::-webkit-scrollbar-thumb {
+  background-color: #8795A2;
+}
